--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-nix = { version = "0.29.0", features = ["sched"] }
+env_logger = "0.11.6"
+gumdrop = "0.8.1"
+log = "0.4.25"
+nix = { version = "0.29.0", features = ["sched", "hostname"] }
