--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,10 @@ log = "0.4.25"
 nix = { version = "0.29.0", features = ["sched", "hostname", "socket", "mount", "fs", "user"] }
 rand = "0.8.5"
 capctl = "0.2.0"
+syscallz = "0.17.0"
+libc = "0.2.169"
+rlimit = "0.10.2"
+cgroups-rs = "0.3.4"
+reqwest = { version = "0.12.12", features = ["blocking", "rustls-tls", "json"] }
+flate2 = "1.0.35"
+tar = "0.4.43"
